# suttafetch

./: INSTALL.md  LICENSE  QUICKSTART.md  README.md  SAMPLE.txt  install.sh  pyproject.toml  suttafetch  suttafetch.py
