[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suttafetch"
version = "1.0.0"
description = "A command-line tool to fetch and display a random sutta from dhammatalks.org"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Jonathan Herz", email = "herzj@tcd.ie" },
]
keywords = ["buddhism", "sutta", "pali-canon", "dhamma", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Religion",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/herzj-tcd/suttafetch"
Repository = "https://github.com/herzj-tcd/suttafetch"
Issues = "https://github.com/herzj-tcd/suttafetch/issues"

[project.scripts]
suttafetch = "suttafetch:main"
